--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ description: >
 author: The Dart Team <dart@google.com>
 homepage: https://www.github.com/dart-lang/test_reflectable
 environment:
-  sdk: '>=1.12.0 <2.0.0'
+  sdk: '>=1.12.0 <=2.0.0-dev.20.0'
 dependencies:
   reflectable: # ^2.0.0-pre.2.0
     path: ../reflectable/reflectable
@@ -16,3 +16,6 @@ dependencies:
   glob: ^1.1.5
 dev_dependencies:
   unittest: ^0.11.0
+transformers:
+- $dart2js:
+    $include: []
